--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,10 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "beercss": "^3.12.13",
         "hono": "^4.7.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-router": "^7.5.0",
+        "react-router": "^7.9.5",
         "rxjs": "^7.8.2"
     },
     "devDependencies": {
