--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,8 +11,22 @@
         "format": "prettier --write src/**/*.ts"
     },
     "dependencies": {
+        "@hono/node-server": "^1.19.6",
+        "@hono/zod-validator": "^0.7.4",
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "hono": "^4.7.6",
+        "jsonwebtoken": "^9.0.2",
+        "zod": "^4.1.12"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^3.0.0",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/node": "^24.10.0",
+        "tsc-alias": "^1.8.16",
+        "tsx": "^4.20.6",
+        "typescript": "~5.7.2"
     }
 }
