--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,12 +13,15 @@
     "dependencies": {
         "@hono/node-server": "^1.19.6",
         "@hono/zod-validator": "^0.7.4",
+        "ajv": "^8.17.1",
         "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
         "hono": "^4.7.6",
         "jsonwebtoken": "^9.0.2",
+        "pino": "^9.14.0",
+        "pino-pretty": "^13.1.2",
         "zod": "^4.1.12"
     },
     "devDependencies": {
