--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,8 +12,10 @@
     "dependencies": {
         "beercss": "^3.12.13",
         "hono": "^4.10.4",
+        "material-dynamic-colors": "^1.1.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.66.0",
         "react-router": "^7.9.5",
         "rxjs": "^7.8.2"
     },
