--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,12 +22,14 @@
         "jsonwebtoken": "^9.0.2",
         "pino": "^9.14.0",
         "pino-pretty": "^13.1.2",
+        "sql.js": "^1.13.0",
         "zod": "^4.1.12"
     },
     "devDependencies": {
         "@types/bcryptjs": "^3.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.10.0",
+        "@types/sql.js": "^1.4.9",
         "tsc-alias": "^1.8.16",
         "tsx": "^4.20.6",
         "typescript": "~5.7.2"
