--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "prettier": "^3.5.3"
-    }
+    },
+    "dependencies": {}
 }
