--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,9 +13,11 @@
         "beercss": "^3.12.13",
         "hono": "^4.10.4",
         "material-dynamic-colors": "^1.1.2",
+        "prop-types": "^15.8.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.66.0",
+        "react-responsive-masonry": "^2.7.1",
         "react-router": "^7.9.5",
         "rxjs": "^7.8.2"
     },
@@ -23,6 +25,7 @@
         "@eslint/js": "^9.21.0",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
+        "@types/react-responsive-masonry": "^2.6.0",
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.21.0",
         "eslint-plugin-react-hooks": "^5.1.0",
