--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
         "@hono/zod-validator": "^0.7.4",
         "ajv": "^8.17.1",
         "bcryptjs": "^3.0.3",
+        "better-sqlite3": "^12.3.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
@@ -23,15 +24,14 @@
         "pino": "^9.14.0",
         "pino-pretty": "^13.1.2",
         "sharp": "^0.34.5",
-        "sql.js": "^1.13.0",
         "unzipper": "^0.12.3",
         "zod": "^4.1.12"
     },
     "devDependencies": {
         "@types/bcryptjs": "^3.0.0",
+        "@types/better-sqlite3": "^7.6.13",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.10.0",
-        "@types/sql.js": "^1.4.9",
         "@types/unzipper": "^0.10.11",
         "tsc-alias": "^1.8.16",
         "tsx": "^4.20.6",
