--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "better-sqlite3"
+        ]
+    },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "prettier": "^3.5.3"
