--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "format": "prettier --write packages/**/*.ts",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
         "build:client": "pnpm --filter=client build",
         "build:server": "pnpm --filter=server build",
         "build": "pnpm -recursive build",
