--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,9 +6,7 @@
     "scripts": {
         "build": "tsc && tsc-alias",
         "start": "node dist/main.js",
-        "dev": "tsx watch ./src/main.ts",
-        "gen:yggapi": "openapi-ts",
-        "format": "prettier --write src/**/*.ts"
+        "dev": "tsx watch ./src/main.ts"
     },
     "dependencies": {
         "@hono/node-server": "^1.19.6",
@@ -18,13 +16,11 @@
         "better-sqlite3": "^12.3.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
-        "express": "^5.1.0",
         "hono": "^4.7.6",
         "jsonwebtoken": "^9.0.2",
         "pino": "^9.14.0",
         "pino-pretty": "^13.1.2",
         "sharp": "^0.34.5",
-        "unzipper": "^0.12.3",
         "zod": "^4.1.12"
     },
     "devDependencies": {
@@ -32,7 +28,6 @@
         "@types/better-sqlite3": "^7.6.13",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.10.0",
-        "@types/unzipper": "^0.10.11",
         "tsc-alias": "^1.8.16",
         "tsx": "^4.20.6",
         "typescript": "~5.7.2"
