--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,9 +21,11 @@
         "pino": "^9.14.0",
         "pino-pretty": "^13.1.2",
         "sharp": "^0.34.5",
+        "write-excel-file": "^2.3.10",
         "zod": "^4.1.12"
     },
     "devDependencies": {
+        "@types/archiver": "^7.0.0",
         "@types/better-sqlite3": "^7.6.13",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.10.0",
