--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,6 +12,7 @@
         "@hono/node-server": "^1.19.6",
         "@hono/zod-validator": "^0.7.4",
         "ajv": "^8.17.1",
+        "archiver": "^7.0.1",
         "bcryptjs": "^3.0.3",
         "better-sqlite3": "^12.3.0",
         "cors": "^2.8.5",
