--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "main.js",
     "scripts": {
-        "build": "tsc && tsc-alias && copyfiles -u 0 assets/* dist -V",
+        "build": "tsc && tsc-alias",
         "start": "node dist/main.js",
         "dev": "tsx watch ./src/main.ts"
     },
@@ -31,7 +31,6 @@
         "@types/better-sqlite3": "^7.6.13",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.10.0",
-        "copyfiles": "^2.4.1",
         "tsc-alias": "^1.8.16",
         "tsx": "^4.20.6",
         "typescript": "~5.7.2"
