--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
     "plugins": ["@trivago/prettier-plugin-sort-imports"],
     "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@/(.*)$", "^[./]"],
     "importOrderSeparation": true,
-    "importOrderSortSpecifiers": true
+    "importOrderSortSpecifiers": true,
+    "importOrderParserPlugins": ["typescript", "decorators-legacy"]
 }
