--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,18 +11,22 @@
     "dependencies": {
         "@hono/node-server": "^1.19.6",
         "@hono/zod-validator": "^0.7.4",
+        "@libsql/client": "^0.15.15",
         "ajv": "^8.17.1",
         "archiver": "^7.0.1",
         "bcryptjs": "^3.0.3",
         "better-sqlite3": "^12.3.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
+        "drizzle-orm": "^0.44.7",
         "hono": "^4.7.6",
         "jsonwebtoken": "^9.0.2",
         "pino": "^9.14.0",
         "pino-pretty": "^13.1.2",
+        "reflect-metadata": "^0.2.2",
         "sharp": "^0.34.5",
         "sharp-watermark": "^0.6.0",
+        "typeorm": "^0.3.27",
         "write-excel-file": "^2.3.10",
         "zod": "^4.1.12"
     },
@@ -31,6 +35,7 @@
         "@types/better-sqlite3": "^7.6.13",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.10.0",
+        "drizzle-kit": "^0.31.7",
         "tsc-alias": "^1.8.16",
         "tsx": "^4.20.6",
         "typescript": "~5.7.2"
