--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-        "prettier": "^3.5.3"
+        "prettier": "^3.5.3",
+        "reflect-metadata": "^0.2.2"
     }
 }
