Refactor gallery and blog services to use shared types
- Updated imports in GalleryDelete, GalleryEdit, GalleryHome, GalleryProtect, and ImageDelete components to use types from '@shared'.
- Modified GalleryService and BlogService to utilize shared types for better consistency.
- Adjusted BaseService to handle new DTO transformations and removed unnecessary date transformations.
- Removed deprecated SQL files and updated database models to reflect new structure.
- Enhanced User and Blog modules to implement new DTO methods for data consistency.
- Cleaned up unused imports and refactored code for improved readability and maintainability.

--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -15,6 +15,9 @@
         "noEmit": true,
         "jsx": "react-jsx",
 
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+
         /* Linting */
         "strict": true,
         "noUnusedLocals": true,
@@ -25,7 +28,8 @@
         "baseUrl": "./", // Lets you set a base directory to resolve non-absolute module names.
         "paths": {
             "@/*": ["src/*"],
-            "@server/*": ["../server/src/*"]
+            "@server/*": ["../server/src/*"],
+            "@shared": ["../server/src/modules/shared.types.ts"]
         },
         "types": ["vite/client"]
     },
