--- a/apps/client/tsconfig.node.json
+++ b/apps/client/tsconfig.node.json
@@ -13,6 +13,9 @@
         "moduleDetection": "force",
         "noEmit": true,
 
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+
         /* Linting */
         "strict": true,
         "noUnusedLocals": true,
@@ -23,7 +26,8 @@
         "baseUrl": "./", // Lets you set a base directory to resolve non-absolute module names.
         "paths": {
             "@/*": ["src/*"],
-            "@server/*": ["../server/src/*"]
+            "@server/*": ["../server/src/*"],
+            "@shared": ["../server/src/modules/shared.types.ts"]
         },
         "types": ["vite/client"]
     },
