Add thumbnail generation options and support for regeneration in the gallery module

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -34,3 +34,8 @@ ADMIN_PASSWORD=admin
 # Secret key for Gallery JWT token signing
 # Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 GALLERY_JWT_SECRET=your-gallery-secret-key-here
+
+# Thumbnail generation options
+THUMBNAIL_SIZE=500
+THUMBNAIL_QUALITY=90
+THUMBNAIL_WITH_WATERMARK=true
