--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,6 +23,7 @@
         "jsonwebtoken": "^9.0.2",
         "pino": "^9.14.0",
         "pino-pretty": "^13.1.2",
+        "rate-limiter-flexible": "^8.3.0",
         "reflect-metadata": "^0.2.2",
         "sharp": "^0.34.5",
         "sharp-watermark": "^0.6.0",
