feat: add step to load .env.test into environment for Playwright tests

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,6 +19,11 @@ jobs:
               run: pnpm exec playwright install --with-deps
             - name: Build
               run: pnpm build
+            - name: Load .env.test into environment
+              run: |
+                  if [ -f tests/.env.test ]; then
+                    grep -v '^\s*#' tests/.env.test >> $GITHUB_ENV
+                  fi
             - name: Run Playwright tests
               run: pnpm test
             - uses: actions/upload-artifact@v4
